[gd_scene load_steps=4 format=3 uid="uid://dqhtbsw0356gd"]

[ext_resource type="Script" uid="uid://drbgo63kkgmyf" path="res://assets/scripts/changelevelbutton.gd" id="1_ceek7"]
[ext_resource type="Theme" uid="uid://ih6uywxnqw3g" path="res://themes/LevelupButton.tres" id="2_emngw"]
[ext_resource type="Theme" uid="uid://cykba2sl2ul0g" path="res://themes/LeveldownButton.tres" id="3_wnikj"]

[node name="ChangeLevelButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 2.0
offset_bottom = 2.0
script = ExtResource("1_ceek7")

[node name="ChangeUpButton" type="Button" parent="."]
layout_mode = 0
offset_top = -2.10811
offset_right = 27.5
offset_bottom = 24.8919
rotation = 6.28319
theme = ExtResource("2_emngw")

[node name="ChangeDownButton" type="Button" parent="."]
layout_mode = 0
offset_top = 25.6757
offset_right = 27.5
offset_bottom = 52.6757
theme = ExtResource("3_wnikj")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -613.0
offset_top = 51.0
offset_right = -573.0
offset_bottom = 74.0
